installation/run-app/deploymentC/svc-deploymentC.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: default
spec:
  type: NodePort
  selector:
    app: deploy-c
  ports:
  - port: 5000
    targetPort: 5000
