installation/run-app/deploymentC/ingress-resource-C.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deploy-c
spec:
  rules:
  - host: deployc.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-c
            port: 
              number: 5000
